--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.3",
     "@react-native-picker/picker": "^2.11.0",
@@ -21,17 +22,26 @@
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.2",
+    "eventemitter3": "^5.0.1",
+    "expo-constants": "^17.0.7",
     "expo-font": "^13.0.4",
+    "expo-image-picker": "^16.0.6",
+    "expo-modules-core": "^2.2.2",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "lottie-ios": "^4.5.0",
     "lottie-react-native": "^7.0.0",
+    "mitt": "^3.0.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-event-source": "^1.1.0",
     "react-native-feather": "^1.1.2",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-keychain": "^9.2.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.3",
