--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "^13.0.4",
     "expo-image-picker": "^16.0.6",
     "expo-modules-core": "^2.2.2",
+    "fast-xml-parser": "^5.2.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
