--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "module": "esnext", // Enable ES module syntax
+    "moduleResolution": "node", // Use Node.js-style module resolution
+    "target": "es2020", // Optional: Match your React Native version
+    "esModuleInterop": true // Recommended for compatibility
+  }
 }
