--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -23,10 +22,6 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.2",
     "eventemitter3": "^5.0.1",
-    "expo-constants": "^17.0.7",
-    "expo-font": "^13.0.4",
-    "expo-image-picker": "^16.0.6",
-    "expo-modules-core": "^2.2.2",
     "fast-xml-parser": "^5.2.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -37,6 +32,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-event-source": "^1.1.0",
     "react-native-feather": "^1.1.2",
     "react-native-geocoding": "^0.5.0",
