--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mitt": "^3.0.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-audio-toolkit": "^1.0.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
     "react-native-event-source": "^1.1.0",
