--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.3",
@@ -31,7 +32,6 @@
     "mitt": "^3.0.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
-    "react-native-audio-toolkit": "^1.0.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
     "react-native-event-source": "^1.1.0",
