--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,10 +109,14 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation 'io.grpc:grpc-okhttp:1.32.2'
-    implementation 'io.grpc:grpc-protobuf:1.32.2'
-    implementation 'io.grpc:grpc-stub:1.32.2'
-    implementation 'com.google.protobuf:protobuf-java:3.12.2'
+
+    implementation 'com.google.protobuf:protobuf-java:3.19.4'
+        implementation 'com.google.protobuf:protobuf-java-util:3.19.4'
+
+        // gRPC dependencies (required for Yandex STT)
+        implementation 'io.grpc:grpc-okhttp:1.46.0'
+        implementation 'io.grpc:grpc-protobuf:1.46.0'
+        implementation 'io.grpc:grpc-stub:1.46.0'
     implementation("com.facebook.react:react-android")
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     if (hermesEnabled.toBoolean()) {
