--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.2",
+    "buffer": "^6.0.3",
     "eventemitter3": "^5.0.1",
     "fast-xml-parser": "^5.2.0",
     "i18next": "^21.6.11",
@@ -32,6 +33,7 @@
     "mitt": "^3.0.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
     "react-native-event-source": "^1.1.0",
@@ -48,6 +50,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
     "xml2js": "^0.6.2"
   },
