--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-event-source": "^1.1.0",
     "react-native-feather": "^1.1.2",
+    "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.0",
