--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.16.1",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
     "xml2js": "^0.6.2"
@@ -66,6 +67,7 @@
     "@types/axios": "^0.14.4",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-native-video": "^5.0.20",
     "@types/react-test-renderer": "^18.0.0",
     "@types/xml2js": "^0.4.14",
     "babel-jest": "^29.6.3",
