--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "async-mutex": "^0.5.0",
     "axios": "^1.8.2",
     "buffer": "^6.0.3",
     "eventemitter3": "^5.0.1",
@@ -28,6 +29,7 @@
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "jwt-decode": "^4.0.0",
     "lottie-ios": "^4.5.0",
     "lottie-react-native": "^7.0.0",
     "mitt": "^3.0.1",
