--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-native-video": "^6.16.1",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "react-native-document-picker": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
