--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.2",
     "buffer": "^6.0.3",
     "eventemitter3": "^5.0.1",
+    "expo-av": "^16.0.7",
     "fast-xml-parser": "^5.2.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -38,6 +39,7 @@
     "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
+    "react-native-document-picker": "^9.1.1",
     "react-native-event-source": "^1.1.0",
     "react-native-feather": "^1.1.2",
     "react-native-fs": "^2.20.0",
@@ -56,8 +58,7 @@
     "react-native-video": "^6.16.1",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
-    "xml2js": "^0.6.2",
-    "react-native-document-picker": "^9.1.1"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
