--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^9.1.1",
     "react-native-event-source": "^1.1.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-feather": "^1.1.2",
     "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
