--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "react-native-screens": "^4.9.1",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.1",
+    "react-native-track-player": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^6.16.1",
+    "react-native-video": "^6.18.0",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
     "xml2js": "^0.6.2"
