--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/xml2js": "^0.4.14",
     "babel-jest": "^29.6.3",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
