--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "buffer": "^6.0.3",
     "eventemitter3": "^5.0.1",
     "fast-xml-parser": "^5.2.0",
-    "i18next": "^21.6.11",
+    "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "i18next-react-native-async-storage": "^1.0.4",
     "jwt-decode": "^4.0.0",
     "lottie-ios": "^4.5.0",
     "lottie-react-native": "^7.0.0",
     "mitt": "^3.0.1",
     "react": "18.3.1",
+    "react-i18next": "^16.5.3",
     "react-native": "0.75.3",
     "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
