--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.18.0",
     "react-native-websocket": "^1.0.2",
+    "react-native-youtube-iframe": "^2.4.1",
     "react-redux": "^9.2.0",
     "xml2js": "^0.6.2"
   },
