--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.5.2",
     "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
