--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
     "react-native-keychain": "^9.2.3",
     "react-native-paper": "^5.12.5",
