--- a/package.json
+++ b/package.json
@@ -81,11 +81,14 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/axios": "^0.14.4",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-video": "^5.0.20",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/sockjs-client": "^1.5.4",
     "@types/xml2js": "^0.4.14",
     "babel-jest": "^29.6.3",
     "baseline-browser-mapping": "^2.9.14",
