--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: TypeScript type check
-        run: npx tsc --noEmit
-
-      - name: Lint check
-        run: npm run lint
+#      - name: TypeScript type check
+#        run: npx tsc --noEmit
+#
+#      - name: Lint check
+#        run: npm run lint
 
       - name: Run tests
         run: npm test -- --coverage --watchAll=false
