--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -215,9 +215,23 @@ jobs:
         run: |
           VERSION="${{ steps.version.outputs.version }}"
           APK_NAME="challenger-v${VERSION}.apk"
-          mv android/app/build/outputs/apk/release/app-release.apk 
+
+          # Debug: Show what files exist
+          echo "=== APK files found ==="
+          find android/app/build/outputs -name "*.apk" -type f 2>/dev/null || echo "No APK files found!"
+
+          # Check if release APK exists
+          if [ ! -f "android/app/build/outputs/apk/release/app-release.apk" ]; then
+            echo "ERROR: app-release.apk not found!"
+            echo "Checking for unsigned APK..."
+            ls -la android/app/build/outputs/apk/release/ 2>/dev/null || echo "Release directory doesn't exist"
+            exit 1
+          fi
+
+          mv android/app/build/outputs/apk/release/app-release.apk \
              android/app/build/outputs/apk/release/${APK_NAME}
           echo "apk_name=${APK_NAME}" >> $GITHUB_OUTPUT
+      
 
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
