--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -99,6 +99,7 @@ jobs:
         run: |
           cat > .env << EOF
           API_BASE_URL=${{ secrets.API_BASE_URL_DEV }}
+          KARAOKE_API_BASE_URL=${{ secrets.KARAOKE_API_BASE_URL_DEV }}
           ENVIRONMENT=development
           EOF
 
@@ -172,6 +173,7 @@ jobs:
         run: |
           cat > .env << EOF
           API_BASE_URL=${{ secrets.API_BASE_URL_PROD }}
+          KARAOKE_API_BASE_URL=${{ secrets.KARAOKE_API_BASE_URL_PROD }}
           ENVIRONMENT=production
           EOF
 
