--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.75.3",
     "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.6.1",
     "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^9.1.1",
     "react-native-event-source": "^1.1.0",
