--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-i18next": "^16.5.3",
     "react-native": "0.75.3",
     "react-native-audio-record": "^0.2.2",
+    "react-native-blob-util": "^0.24.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.6.1",
     "react-native-device-info": "^14.0.4",
